ROX-15047: implement authentication with infra-auth-lib (#9)
